--- a/app/frontend/assets/styles/components/_forms.scss
+++ b/app/frontend/assets/styles/components/_forms.scss
@@ -330,6 +330,7 @@ textarea {
     label {
         font-weight: 400;
         font-size: 0.778rem;
+        word-break: break-word;
 
         &:has(input:disabled) {
             color: $text-muted;
