--- a/app/frontend/assets/styles/components/_alert.scss
+++ b/app/frontend/assets/styles/components/_alert.scss
@@ -105,6 +105,7 @@
         background-color: $blue-200;
         font-size: 0.778rem;
         font-weight: 400;
+        word-break: break-word;
 
         &::before {
             content: "";
