--- a/app/frontend/assets/styles/components/_page-unauthorized.scss
+++ b/app/frontend/assets/styles/components/_page-unauthorized.scss
@@ -57,13 +57,13 @@
                 object-fit: cover;
                 display: block;
             }
+        }
 
-            .logo-organisatie {
-                display: block;
-                left: 50%;
-                bottom: 1rem;
-                transform: translateX(-50%);
-            }
+        .logo-organisatie {
+            display: block;
+            left: 50%;
+            bottom: 1rem;
+            transform: translateX(-50%);
         }
     }
 
@@ -109,7 +109,7 @@
             width: 50%;
 
             .logo-organisatie {
-                display: block;
+                display: none;
             }
         }
         .container__content {
