Setup flex-layout, in progress

--- a/app/apps/main/templates/melding/detail/status.html
+++ b/app/apps/main/templates/melding/detail/status.html
@@ -15,7 +15,7 @@
         <h2>Status</h2>
         <div class="container__status">
             <div class="container__status--content">
-                <div class="container__content">
+                <div class="container__content cols--2">
                     <h3>Afgehandeld door</h3>
                     <div class="content">
                         <span class="initials">MS</span>
@@ -29,14 +29,21 @@
                     <div class="content">
                         <p>Niet nu</p>
                     </div>
-                </div>
-                <div class="container__content">
                     <h3>Specificatie</h3>
                     <div class="content">
                         <p>Reeds ingediend</p>
                     </div>
                 </div>
                 <div class="container__content">
+                    <h3>Interne opmerking</h3>
+                    <div class="content container__overflow" data-controller="overflow">
+                        <p class="content__overflow">
+                            Deze melding is al ingepland maar kan vanwege weersomstandigheden pas volgende maand uitgevoerd worden. Wij zullen u op  de hoogte houden wanneer de werkzaamheden gedaan zijn Deze melding is al ingepland maar kan vanwege weersomstandigheden pas volgende maand uitgevoerd worden. Wij zullen u op  de hoogte houden wanneer de werkzaamheden gedaan zijn. Deze melding is al ingepland maar kan vanwege weersomstandigheden pas volgende.
+                        </p>
+                        {% include "icons/arrow-right.svg" %}
+                    </div>
+                </div>
+                <div class="container__content cols--6">
                     <h3>Bericht voor melder</h3>
                     <div class="content container__overflow" data-controller="overflow">
                         <p class="content__overflow">
@@ -45,15 +52,83 @@
                         {% include "icons/arrow-right.svg" %}
                     </div>
                 </div>
-                <div class="container__content">
+                <div class="container__content cols--2">
                     <h3>Datum en tijd</h3>
                     <div class="content">
                         <p>04-04-2025 16.44</p>
                     </div>
                 </div>
             </div>
-
         </div>
+
+        <div class="container__status">
+            <div class="container__status--content">
+                <div class="container__content cols--2">
+                    <h3>Afgehandeld door</h3>
+                    <div class="content">
+                        <span class="initials">MS</span>
+                        <div class="message">
+                            <h4>Malik Schouten</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="container__content">
+                    <h3>Reden</h3>
+                    <div class="content">
+                        <p>Niet nu</p>
+                    </div>
+                    <h3>Specificatie</h3>
+                    <div class="content">
+                        <p>Reeds ingediend</p>
+                    </div>
+                </div>
+                <div class="container__content cols--6">
+                    <h3>Bericht voor melder</h3>
+                    <div class="content container__overflow" data-controller="overflow">
+                        <p class="content__overflow">
+                            Deze melding is al ingepland maar kan vanwege weersomstandigheden pas volgende maand uitgevoerd worden. Wij zullen u op  de hoogte houden wanneer de werkzaamheden gedaan zijn Deze melding is al ingepland maar kan vanwege weersomstandigheden pas volgende maand uitgevoerd worden. Wij zullen u op  de hoogte houden wanneer de werkzaamheden gedaan zijn. Deze melding is al ingepland maar kan vanwege weersomstandigheden pas volgende.
+                        </p>
+                        {% include "icons/arrow-right.svg" %}
+                    </div>
+                </div>
+                <div class="container__content cols--2">
+                    <h3>Datum en tijd</h3>
+                    <div class="content">
+                        <p>04-04-2025 16.44</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container__status">
+            <div class="container__status--content cols--4">
+                <div class="container__content cols--2">
+                    <h3>Afgehandeld door</h3>
+                    <div class="content">
+                        <span class="initials">MS</span>
+                        <div class="message">
+                            <h4>Malik Schouten</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="container__content cols--6">
+                    <h3>Bericht voor melder</h3>
+                    <div class="content container__overflow" data-controller="overflow">
+                        <p class="content__overflow">
+                            Deze melding is al ingepland maar kan vanwege weersomstandigheden pas volgende maand uitgevoerd worden. Wij zullen u op  de hoogte houden wanneer de werkzaamheden gedaan zijn Deze melding is al ingepland maar kan vanwege weersomstandigheden pas volgende maand uitgevoerd worden. Wij zullen u op  de hoogte houden wanneer de werkzaamheden gedaan zijn. Deze melding is al ingepland maar kan vanwege weersomstandigheden pas volgende.
+                        </p>
+                        {% include "icons/arrow-right.svg" %}
+                    </div>
+                </div>
+                <div class="container__content cols--2">
+                    <h3>Datum en tijd</h3>
+                    <div class="content">
+                        <p>04-04-2025 16.44</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 </section>
 
