--- a/app/frontend/assets/styles/components/_incident-details-blocks.scss
+++ b/app/frontend/assets/styles/components/_incident-details-blocks.scss
@@ -34,11 +34,25 @@
     }
 
     .container__status--content {
-        display: grid;
-        grid-template-columns: minmax(0, 2fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 3fr) minmax(
-                0,
-                1fr
-            );
+        display: flex;
+        justify-content: flex-start;
+
+        .container__content {
+            flex: 1 1 18.75%;
+            max-width: 43.75%;
+
+            > * {
+                max-width: 420px;
+            }
+
+            &.cols--2 {
+                max-width: 25%;
+            }
+
+            &.cols--6 {
+                min-width: 31.25%;
+            }
+        }
     }
 
     .taken--header {
