--- a/app/apps/main/templates/melding/melding_detail.html
+++ b/app/apps/main/templates/melding/melding_detail.html
@@ -341,18 +341,18 @@
                                         {% endif %}
                                         <section class="section--separated">
                                             <div class="container__details">
-                                                <h2>Tijdlijn</h2>
+                                                <h2>Notities en foto's</h2>
                                                 {% if melding.status.naam != "afgehandeld" and melding.status.naam != "geannuleerd" %}
                                                     <turbo-frame id="informatie_toevoegen" src="{% url 'informatie_toevoegen' melding.uuid %}">
                                                     </turbo-frame>
                                                 {% endif %}
                                             </div>
                                         </section>
-                                        <section class="section--separated {% if melding.status.naam is 'afgehandeld' or melding.status.naam is not 'geannuleerd' %}no-padding{% endif %}"
+                                        {% comment %} <section class="section--separated {% if melding.status.naam is 'afgehandeld' or melding.status.naam is not 'geannuleerd' %}no-padding{% endif %}"
                                                     data-testid="detailTijdlijn"
                                                     id="melding_detail_tijdlijn">
                                             {% include "melding/detail/tijdlijn.html" with melding=melding perms=perms disable_stream=True only %}
-                                        </section>
+                                        </section> {% endcomment %}
                                     </div>
                                 </div>
                             </div>
