--- a/app/apps/main/templates/home.html
+++ b/app/apps/main/templates/home.html
@@ -38,7 +38,7 @@
             </h1>
             {% if not request.user.is_authenticated %}
                 <p>
-                    PlanR is de app voor het voeren van regie over melding in de openbare ruimte.
+                    PlanR is de app voor het voeren van regie over meldingen in de openbare ruimte.
                 </p>
                 <a href="{% url 'login' %}"
                     class="btn btn-action btn-action--primary"
