Hide top-bar and navigation on base-url without rights

--- a/app/frontend/assets/styles/components/_page-unauthorized.scss
+++ b/app/frontend/assets/styles/components/_page-unauthorized.scss
@@ -1,4 +1,10 @@
 .page__unauthorized {
+    .container__toplevel {
+        > aside,
+        .container__main .bar--top {
+            display: none;
+        }
+    }
     .container__main {
         margin: 0;
         padding: 0;
