Logboek added to B&C

--- a/app/apps/main/templates/logboek/basis.html
+++ b/app/apps/main/templates/logboek/basis.html
@@ -23,7 +23,7 @@
                         {% for logboek_item in logboek_groep.logboek_items %}
                             <li>
                                 {{logboek_item.render_icon}}
-                                <div class="message haai">
+                                <div class="message">
                                     <h4>{{logboek_item.titel}}</h4>
                                     {{logboek_item.render_content}}
                                 </div>
