--- a/app/frontend/assets/styles/components/_list-mutations.scss
+++ b/app/frontend/assets/styles/components/_list-mutations.scss
@@ -47,6 +47,10 @@
                 padding-top: 0.25rem;
                 color: $gray-600;
             }
+
+            .container__thumbs {
+                padding: 8px 0 0;
+            }
         }
     }
 }
