--- a/app/apps/authenticatie/templates/auth/rollen_rechten.html
+++ b/app/apps/authenticatie/templates/auth/rollen_rechten.html
@@ -1,21 +1,16 @@
-<h3>Rol & rechten</h3>
 <div>
     <dl>
-        <dt>Rol</dt>
-        <dd>
-            {% if request.user.profiel.context %}
-                {{ request.user.profiel.context.naam }}
-            {% else %}
-                - geen rol -
-            {% endif %}
-        </dd>
-        <dt>Rechten</dt>
-        <dd>
-            {% if request.user.groups.all %}
-                {{ request.user.groups.all.0.name }}
-            {% else %}
-                - geen rechten -
-            {% endif %}
-        </dd>
+        <div>
+            <dt>Rol:</dt>
+            <dd>
+                {% if request.user.profiel.context %}{{ request.user.profiel.context.naam }}{% else %}- geen rol -{% endif %}
+            </dd>
+        </div>
+        <div>
+            <dt>Rechten:</dt>
+            <dd>
+                {% if request.user.groups.all %}{{ request.user.groups.all.0.name }}{% else %}- geen rechten -{% endif %}
+            </dd>
+        </div>
     </dl>
 </div>
