--- a/app/apps/main/templates/logboek/content/informatie_toegevoegd.html
+++ b/app/apps/main/templates/logboek/content/informatie_toegevoegd.html
@@ -1,11 +1,6 @@
 {% load mor_core_url from main_tags %}
 {% load get_gebruiker_object_middels_email from gebruikers_tags %}
-{% if omschrijving_intern and titel != omschrijving_intern %}
-    <p class="content__overflow">
-        Notitie: {{ omschrijving_intern }}
-    </p>
-    {% include "icons/arrow-right.svg" %}
-    {% endif %}
+{% if omschrijving_intern and titel != omschrijving_intern %}<p class="content__overflow">{{ omschrijving_intern }}</p>{% endif %}
 
 {% if bijlagen|length > 0 %}
     <div class="container__thumbs">
